// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Modal > renders large size 1`] = `
<div
  aria-labelledby="modal-title"
  aria-modal="true"
  class="fixed inset-0 z-50 flex items-center justify-center"
  role="dialog"
>
  <div
    aria-hidden="true"
    class="fixed inset-0 bg-slate-900/40 backdrop-blur-[3px] animate-fade-in"
  />
  <div
    class="relative z-10 mx-4 w-full max-w-2xl
          flex max-h-[85vh] flex-col overflow-hidden
          rounded-2xl border border-slate-200 bg-white
          shadow-(--shadow-xl)
          dark:border-slate-800 dark:bg-slate-900
          animate-slide-up"
  >
    <div
      class="flex items-start justify-between border-b border-slate-100 px-6 py-5 dark:border-slate-800"
    >
      <div
        class="min-w-0 flex-1 pr-4"
      >
        <h2
          class="text-heading-3 text-slate-900 dark:text-white"
          id="modal-title"
        >
          Buyuk Modal
        </h2>
      </div>
      <button
        aria-label="Kapat"
        class="-mr-1 -mt-1 inline-flex h-8 w-8 shrink-0 items-center justify-center rounded-[10px] text-slate-400 transition-colors hover:bg-slate-100 hover:text-slate-700 focus:outline-none focus:ring-[3px] focus:ring-honeywell-red/20 dark:hover:bg-slate-800 dark:hover:text-slate-200"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-x"
          fill="none"
          height="16"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18 6 6 18"
          />
          <path
            d="m6 6 12 12"
          />
        </svg>
      </button>
    </div>
    <div
      class="flex-1 overflow-y-auto px-6 py-5"
    >
      <p>
        Genis içerik
      </p>
    </div>
  </div>
</div>
`;

exports[`Modal > renders with title and content when open 1`] = `
<div
  aria-labelledby="modal-title"
  aria-modal="true"
  class="fixed inset-0 z-50 flex items-center justify-center"
  role="dialog"
>
  <div
    aria-hidden="true"
    class="fixed inset-0 bg-slate-900/40 backdrop-blur-[3px] animate-fade-in"
  />
  <div
    class="relative z-10 mx-4 w-full max-w-lg
          flex max-h-[85vh] flex-col overflow-hidden
          rounded-2xl border border-slate-200 bg-white
          shadow-(--shadow-xl)
          dark:border-slate-800 dark:bg-slate-900
          animate-slide-up"
  >
    <div
      class="flex items-start justify-between border-b border-slate-100 px-6 py-5 dark:border-slate-800"
    >
      <div
        class="min-w-0 flex-1 pr-4"
      >
        <h2
          class="text-heading-3 text-slate-900 dark:text-white"
          id="modal-title"
        >
          Email Detayi
        </h2>
      </div>
      <button
        aria-label="Kapat"
        class="-mr-1 -mt-1 inline-flex h-8 w-8 shrink-0 items-center justify-center rounded-[10px] text-slate-400 transition-colors hover:bg-slate-100 hover:text-slate-700 focus:outline-none focus:ring-[3px] focus:ring-honeywell-red/20 dark:hover:bg-slate-800 dark:hover:text-slate-200"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-x"
          fill="none"
          height="16"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18 6 6 18"
          />
          <path
            d="m6 6 12 12"
          />
        </svg>
      </button>
    </div>
    <div
      class="flex-1 overflow-y-auto px-6 py-5"
    >
      <p>
        Email icerigi burada
      </p>
    </div>
  </div>
</div>
`;
